kubernetes/projects/core/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scape: "true"
    prometheus.io/port: "8082"
  name: argocd-image-updater
  namespace: argocd
spec:
  selector:
    app: argocd-image-updater
  ports:
  - port: 8082
